--- a/family-tree/package.json
+++ b/family-tree/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "angular-responsive-carousel": "^2.1.2",
     "ngx-owl-carousel-o": "^15.0.0",
+    "playcanvas": "^1.65.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -31,6 +32,7 @@
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/yfiles": "^2.1.0",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.1",
     "jasmine-core": "~4.5.0",
