--- a/family-tree/package.json
+++ b/family-tree/package.json
@@ -23,6 +23,8 @@
     "angular-responsive-carousel": "^2.1.2",
     "ngx-owl-carousel-o": "^15.0.0",
     "playcanvas": "^1.65.5",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
